# Agentic-Ship-Studio

./: .gitignore  BEGINNER_TUTORIAL.md  CHATGPT_VIDEO_SETUP.md  DEMO_SCRIPT.md  README.md  SPEC.md  SUBMISSION.md  UNIQUE_EDGE.md  VIDEO_DEMO_PLAN.md  VIDEO_NARRATION.txt  VIDEO_NARRATION_4MIN.txt  VIDEO_NARRATION_5MIN.txt  pyproject.toml
.github/workflows/: ci.yml
.video_assets/: narration.srt  narration_neural.srt  narration_neural_padded.m4a  tts_test.vtt
demo-repo-pro/: .env.example  LICENSE  README.md  SPEC.md  run_demo.py
demo-repo-pro/config/: project.toml
demo-repo-pro/docs/: USER_STORY.md
demo-repo-pro/scripts/: sample_run.sh
demo-repo-pro/src/signal_garden/: engine.py
demo-repo-video/: .gitignore  DEMO_SCRIPT.md  PRODUCT_BRIEF.md  SUBMISSION.md  UNIQUE_EDGE.md  pyproject.toml
demo-repo-video/.github/workflows/: ci.yml
demo-repo-video/data/: inbox.json
demo-repo-video/docs/: ARCH_OVERVIEW.md
demo-repo-video/src/signal_garden/: __init__.py  io.py
scripts/: build_full_demo_video.sh  build_narrated_demo_video.sh  create_video_demo_repo.sh  record_demo_playwright.py  run_video_demo.sh
tests/: test_agent_pack.py  test_checks.py  test_cli.py  test_coach.py  test_gui.py  test_gui_static.py
vibe_sentinel/: __main__.py  agent_pack.py  checks.py  cli.py  coach.py  gui.py  models.py  report.py  templates.py
vibe_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vibe_sentinel/web/: app.js  artifacts.html  artifacts.js  fluid.js  index.html  openclaw.html  openclaw.js  styles.css  tutorial.html  tutorial.js
